publishing awesome pages 1593187136229

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <a class="primary-btn"href="#"> hire me </a>
      </div>
      <div class="half-width">
-       <img class="side-img"src="james.png"alt="">
+       <img class="side-img"src="james.png"img="">
        </div>
      </section>
      <section class="contaner">
